<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:textColorHint="@color/colorSecondaryText">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_User_credentials"
                style="@style/customEditText"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="@dimen/dimen_five"
                android:hint="@string/hint_mobile_no_or_email_id"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorSecondaryText"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                style="@style/customEditText"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="@dimen/dimen_five"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/forget_password"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginTop="@dimen/login_margin_top"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:background="@color/primary"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btn_register"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/create_an_account"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/primary" />

    </LinearLayout>

</FrameLayout>