<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SigninFragment">

    <androidx.core.widget.NestedScrollView
        android:fitsSystemWindows="true"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_first_name"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_width="match_parent">

                <EditText android:hint="@string/first_name"
                    android:id="@+id/et_first_name"
                    android:background="@color/white"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_last_name"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_width="match_parent">

                <EditText android:hint="@string/last_name"
                    android:background="@color/white"
                    android:id="@+id/et_last_name"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_width="match_parent">

                <EditText android:hint="@string/email"
                    android:background="@color/white"
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true">

                <EditText android:hint="@string/password"
                    android:background="@color/white"
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_confirm_password"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true">

                <EditText android:hint="@string/confirm_password"
                    android:background="@color/white"
                    android:id="@+id/et_confirm_password"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_margin_top"
                android:layout_width="match_parent"
                android:text="@string/register"
                android:background="@color/primary"
                android:textColor="@color/white"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>